rustdocs/errors/rust-bitcoin-hashes-src-sha256-crypto.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/hashes/src/sha256/crypto.rs:101:9
    |
101 |     pub(super) const fn compute_midstate_unoptimized(bytes: &[u8], fina...
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
   --> ../rust-bitcoin/hashes/src/sha256/crypto.rs:251:9
    |
251 |     pub(super) fn process_block(&mut self) {
    |         ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/hashes/src/sha256/crypto.rs:8:5
  |
8 | use internals::slice::SliceExt;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/hashes/src/sha256/crypto.rs:10:5
   |
10 | use super::{HashEngine, Midstate, BLOCK_SIZE};
   |     ^^^^^ there are too many leading `super` keywords

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0433`.
